CHANGES.txt - 09/08/2004
------------------------

CHANGES IN CUPS V1.1.21rc3

	- The lp, lpq, lpr, and lpstat commands now report when
	  an environment variable is pointing to a non-existent
	  printer instead of just saying "no default
	  destination" (STR #879)
	- Queue names with 2 periods (e.g. "printer..2") were
	  not supported (STR #866)


CHANGES IN CUPS V1.1.21rc2

	- Fixed a denial-of-service bug in the CUPS browse
	  protocol support (STR #863)
	- The scheduler used a select() timeout of INT_MAX
	  seconds when there was nothing to do, which doesn't
	  work on IRIX (STR #864)
	- Updated the cupsaddsmb program to use the new Windows
	  2000 PostScript drivers instead of the Windows NT
	  printer drivers (STR #390)
	- The gziptoany filter did not produce copies for raw
	  print jobs (STR #808)
	- The cupsLangGet() function now uses nl_langinfo(),
	  when available, to get the current encoding (STR #856)
	- Added a ReloadTimeout directive to control how long
	  the scheduler waits for jobs to complete before
	  restarting the scheduler (STR #861)
	- Added a note to the default cupsd.conf file which
	  mentions that you must allow connections from
	  localhost for the command-line and web interfaces to
	  work (STR #850)
	- The IPP backend incorrectly used the local port when
	  communicating with a remote server; this caused
	  problems with some custom configurations (STR #852)
	- The cups-lpd mini-daemon wasn't using the right
	  default banner option (STR #851)
	- Updated the new httpDecode64_2() and httpEncode64_2()
	  functions to handle arbitrary binary data, not just
	  text (STR #860)
	- String options with quotes in their values were not
	  quoted properly by the scheduler (STR #839)
	- Configure script changes for GNU/Hurd (STR #838)
	- The lppasswd program was not installed properly by GNU
	  install when the installer was not root (STR #836)
	- Updated the cups-lpd man page (STR #843)
	- Fixed a typo in the cupsd man page (STR #833)